--- a/labs-ios-starter/Map Screen/MapScreen.storyboard
+++ b/labs-ios-starter/Map Screen/MapScreen.storyboard
@@ -304,8 +304,22 @@
                 <view contentMode="scaleToFill" id="YWh-bY-hc2">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lY6-oD-pGL">
+                            <rect key="frame" x="215" y="5" width="20" height="22"/>
+                            <color key="tintColor" name="AccentYellow"/>
+                            <state key="normal" image="xmark.circle.fill" catalog="system"/>
+                            <connections>
+                                <action selector="cancelPopUpView:" destination="k2w-x0-7Q1" eventType="touchUpInside" id="5T2-4T-qKV"/>
+                            </connections>
+                        </button>
+                    </subviews>
                     <viewLayoutGuide key="safeArea" id="gJf-ML-sJR"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="gJf-ML-sJR" firstAttribute="trailing" secondItem="lY6-oD-pGL" secondAttribute="trailing" constant="5" id="E3g-3S-sKg"/>
+                        <constraint firstItem="lY6-oD-pGL" firstAttribute="top" secondItem="YWh-bY-hc2" secondAttribute="top" constant="5" id="JZX-Tz-WmW"/>
+                    </constraints>
                 </view>
             </objects>
             <point key="canvasLocation" x="376.81159420289856" y="180.80357142857142"/>
@@ -319,6 +333,10 @@
         <image name="livability" width="35" height="35"/>
         <image name="rentalPrice" width="25" height="22.5"/>
         <image name="walkability" width="35" height="35"/>
+        <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
+        <namedColor name="AccentYellow">
+            <color red="0.94900000095367432" green="0.70999997854232788" blue="0.2669999897480011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="DarkBlue">
             <color red="0.063000001013278961" green="0.27099999785423279" blue="0.45100000500679016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
