disabled user interaction on map as should be used just for viewing

--- a/labs-ios-starter/Favorites/Favorites.storyboard
+++ b/labs-ios-starter/Favorites/Favorites.storyboard
@@ -35,7 +35,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="232"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OIu-JD-zjZ">
+                                                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" scrollEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsCompass="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OIu-JD-zjZ">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="151"/>
                                                 </mapView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NZJ-Gy-RMc">
